tests/type-errors/invalid_ratinal_literal.arl
archetype invalid_ratinal_literal

variable r : rational = 2 / 0
